tests/NormalTests/paczka1/small_fuzzy/40693376.err
Error in line 1: EqKkj S694 98,2
Error in line 6: nVH A44 9,7
Error in line 13: mWpW S675 90,6
